--- a/client/routes/+home/home.scss
+++ b/client/routes/+home/home.scss
@@ -4,12 +4,13 @@ a {
 
 .hero {
     height: 480px;
-    background-image: linear-gradient(225deg, #3e5673, #1b2530 86%, #1a242e 0);
+    background-image: linear-gradient(225deg, #5a3e73, #923267 86%, #924172 0);
     .nav-bar {
         display: flex;
         justify-content: space-between;
         padding-top: 15px;
         .item {
+            font-size: 15px;
             font-weight: bold;
             color: rgba(255, 255, 255, 0.5);
             padding: 0 15px;
@@ -22,7 +23,7 @@ a {
             }
             &.brand {
                 color: rgba(255, 255, 255, 0.9);
-                font-size: 20px;
+                font-size: 22px;
             }
             &.disabled {
 
