--- a/client/routes/+design-space/design-space.scss
+++ b/client/routes/+design-space/design-space.scss
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    height: 30px;
     background: #FDFDFD;
     border-bottom: 1px solid rgba(43, 50, 57, 0.15);
 }
