--- a/client/routes/+components/+category/+component/component.scss
+++ b/client/routes/+components/+category/+component/component.scss
@@ -1,5 +1,36 @@
 .demo-item {
     margin: 10px;
-    padding: 10px;
+    padding: 0 10px 10px 10px;
     background: white;
+}
+
+.demo-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 0;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #eee;
+    span {
+        display: block;
+        font-size: 16px;
+        font-weight: bold;
+        margin-right: 20px;
+    }
+}
+
+.component-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: white;
+    padding: 20px;
+    .component-name {
+        font-weight: bold;
+        font-size: 18px;
+        margin-right: 10px;
+    }
+    .component-version {
+
+    }
 }
