--- a/client/routes/+components/components.scss
+++ b/client/routes/+components/components.scss
@@ -5,7 +5,6 @@
 .component-nav-bar {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     height: 50px;
     background: #FDFDFD;
     border-bottom: 1px solid rgba(43, 50, 57, 0.15);
@@ -15,13 +14,20 @@
 }
 
 .navbar-title {
-    display: block;
+    display: flex;
+    align-items: center;
     font-size: 16px;
     font-weight: bold;
     padding: 10px 20px;
+    transition: color, background-color .3s;
     &:hover {
         cursor: pointer;
-        color: black;
-        transition: color .3s;
+        color: #67315e;
+    }
+    &.active {
+        color: #67315e;
+        background-color: #f9f9f9;
+        border-bottom: 2px solid #67315e;
+        padding-bottom: 8px;
     }
 }
