--- a/client/routes/+components/+category/+component/component.scss
+++ b/client/routes/+components/+category/+component/component.scss
@@ -41,6 +41,14 @@
             font-size: 14px;
             white-space: nowrap;
         }
+        .support {
+            display: flex;
+            align-items: center;
+            margin-left: 10px;
+            padding: 2px 5px;
+            background: whitesmoke;
+            border-radius: 3px;
+        }
     }
     .right {
         display: flex;
