--- a/tooltip/tooltip.scss
+++ b/tooltip/tooltip.scss
@@ -1,29 +1,26 @@
 & {
-    display: flex;
-    position: relative;
-    .tooltip-text {
-        visibility: hidden;
-        background-color: black;
-        color: #fff;
-        text-align: center;
-        padding: 5px 10px;
-        border-radius: 6px;
+    visibility: hidden;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 10px;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity .3s;
+    white-space: nowrap;
+    &::after {
+        content: " ";
         position: absolute;
-        z-index: 1;
-        opacity: 0;
-        transition: opacity .3s;
-        &::after {
-            content: " ";
-            position: absolute;
-            top: 100%;
-            left: 50%;
-            margin-left: -5px;
-            border-width: 5px;
-            border-style: solid;
-            border-color: black transparent transparent transparent;
-        }
+        top: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: black transparent transparent transparent;
     }
-    &:hover .tooltip-text {
+    &.active {
         opacity: 1;
         visibility: visible;
     }
