--- a/components/common/tooltip/lib/tooltip/tooltip.css
+++ b/components/common/tooltip/lib/tooltip/tooltip.css
@@ -1,29 +1,25 @@
 .nt-tooltip-tooltip {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative; }
-  .nt-tooltip-tooltip .tooltip-text {
-    visibility: hidden;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    padding: 5px 10px;
-    border-radius: 6px;
+  visibility: hidden;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 10px;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  -webkit-transition: opacity .3s;
+  transition: opacity .3s;
+  white-space: nowrap; }
+  .nt-tooltip-tooltip::after {
+    content: " ";
     position: absolute;
-    z-index: 1;
-    opacity: 0;
-    -webkit-transition: opacity .3s;
-    transition: opacity .3s; }
-    .nt-tooltip-tooltip .tooltip-text::after {
-      content: " ";
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      margin-left: -5px;
-      border-width: 5px;
-      border-style: solid;
-      border-color: black transparent transparent transparent; }
-  .nt-tooltip-tooltip:hover .tooltip-text {
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent; }
+  .nt-tooltip-tooltip.active {
     opacity: 1;
     visibility: visible; }
