--- a/components/common/button/lib/button/button.scss
+++ b/components/common/button/lib/button/button.scss
@@ -1,6 +1,8 @@
-@import "./button.mixin";
 
-._global {
+    @import "./button.mixin";
+.nt-button-button{
+
+}
     @font-face {
         font-family: 'fit-button';
         src: url('./font/fit-button.eot');
@@ -30,7 +32,7 @@
     .fit-button-loading:before {
         content: "\e982";
     }
-}
+.nt-button-button{
 
 & {
     transition: opacity .3s;
@@ -264,4 +266,5 @@
         opacity: 0;
         transform: scale(2.5);
     }
+}
 }
