--- a/components/common/button/lib/button/button.scss
+++ b/components/common/button/lib/button/button.scss
@@ -1,4 +1,8 @@
 
+    @import "./button.mixin";
+.nt-button-button{
+
+}
     @font-face {
         font-family: 'fit-button';
         src: url('./font/fit-button.eot');
