--- a/components/web-common/tooltip/lib/tooltip/tooltip.css
+++ b/components/web-common/tooltip/lib/tooltip/tooltip.css
@@ -1,4 +1,4 @@
-.nt-tooltip-tooltip {
+.nt-web-tooltip-tooltip {
   visibility: hidden;
   background-color: black;
   color: #fff;
@@ -11,7 +11,7 @@
   -webkit-transition: opacity .3s;
   transition: opacity .3s;
   white-space: nowrap; }
-  .nt-tooltip-tooltip::after {
+  .nt-web-tooltip-tooltip::after {
     content: " ";
     position: absolute;
     top: 100%;
@@ -20,6 +20,6 @@
     border-width: 5px;
     border-style: solid;
     border-color: black transparent transparent transparent; }
-  .nt-tooltip-tooltip.active {
+  .nt-web-tooltip-tooltip.active {
     opacity: 1;
     visibility: visible; }
