--- a/client/routes/+components/+category/+component/component.scss
+++ b/client/routes/+components/+category/+component/component.scss
@@ -52,25 +52,28 @@
     }
     .right {
         display: flex;
-        .component-install {
+        .component-install-container {
             display: flex;
-            align-items: center;
-            word-break: break-all;
-            padding: 5px 10px;
-            min-width: 400px;
-            vertical-align: middle;
-            border: 1px solid #ddd;
-            border-radius: 3px;
-            border-top-right-radius: 0;
-            border-bottom-right-radius: 0;
-            outline: none;
-            box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
-        }
-        .copy {
-            margin-right: 10px;
-            border-left: none;
-            border-top-left-radius: 0;
-            border-bottom-left-radius: 0;
+            .component-install {
+                display: flex;
+                align-items: center;
+                word-break: break-all;
+                padding: 5px 10px;
+                min-width: 400px;
+                vertical-align: middle;
+                border: 1px solid #ddd;
+                border-radius: 3px;
+                border-top-right-radius: 0;
+                border-bottom-right-radius: 0;
+                outline: none;
+                box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+            }
+            .copy {
+                margin-right: 10px;
+                border-left: none;
+                border-top-left-radius: 0;
+                border-bottom-left-radius: 0;
+            }
         }
         .switch-group {
             display: flex;
