--- a/client/routes/+components/+category/+component/+dependence/dependence.scss
+++ b/client/routes/+components/+category/+component/+dependence/dependence.scss
@@ -12,6 +12,7 @@ table {
         height: 40px;
         border: 1px solid #edf1f2;
         font-weight: bold;
+        font-size: 16px;
         width: 50%;
     }
     tbody tr td {
@@ -28,7 +29,7 @@ table {
 
 .dependence-link {
     color: #369;
-    &:hover{
+    &:hover {
         text-decoration: underline;
     }
 }
