--- a/client/routes/+components/components.scss
+++ b/client/routes/+components/components.scss
@@ -8,7 +8,7 @@
     height: 50px;
     background: #FDFDFD;
     border-bottom: 1px solid rgba(43, 50, 57, 0.15);
-    .left {
+    .left, .right {
         display: flex;
     }
 }
