--- a/client/layout/layout.scss
+++ b/client/layout/layout.scss
@@ -1,3 +1,7 @@
+& {
+    position: relative;
+}
+
 .nav-bar-container {
     display: flex;
     justify-content: space-between;
@@ -32,4 +36,41 @@
 .github-link {
     font-size: 25px;
     color: white;
+}
+
+.loading {
+    position: absolute;
+    left: 0;
+    height: 3px;
+    background-color: #af31b1;
+}
+
+.loading-start {
+    animation: loading 3s cubic-bezier(0.25, 0.1, 0.25, 1);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+}
+
+.loading-end {
+    animation: loading-from-start 0.1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: none;
+}
+
+@keyframes loading {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 95%;
+    }
+}
+
+@keyframes loading-from-start {
+    0% {
+        width: 95%;
+    }
+    100% {
+        width: 100%;
+    }
 }
