--- a/client/layout/layout.scss
+++ b/client/layout/layout.scss
@@ -46,13 +46,13 @@
 }
 
 .loading-start {
-    animation: loading 3s cubic-bezier(0.25, 0.1, 0.25, 1);
+    animation: loading 20s cubic-bezier(0.25, 0.1, 0.25, 1);
     animation-iteration-count: 1;
     animation-fill-mode: both;
 }
 
 .loading-end {
-    animation: loading-from-start 0.1s;
+    animation: loading-from-start 0.02s;
     animation-iteration-count: 1;
     animation-fill-mode: none;
 }
@@ -60,6 +60,12 @@
 @keyframes loading {
     0% {
         width: 0;
+    }
+    10% {
+        width: 60%;
+    }
+    30% {
+        width: 80%;
     }
     100% {
         width: 95%;
