--- a/components/web-common/tooltip/lib/tooltip/tooltip.css
+++ b/components/web-common/tooltip/lib/tooltip/tooltip.css
@@ -1,19 +1,17 @@
 .nt-web-tooltip-tooltip {
-    visibility: hidden;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    padding: 5px 10px;
-    border-radius: 6px;
-    position: absolute;
-    z-index: 1;
-    opacity: 0;
-    -webkit-transition: opacity .3s;
-    transition: opacity .3s;
-    white-space: nowrap;
-}
-
-.nt-web-tooltip-tooltip::after {
+  visibility: hidden;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 10px;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  -webkit-transition: opacity .3s;
+  transition: opacity .3s;
+  white-space: nowrap; }
+  .nt-web-tooltip-tooltip::after {
     content: " ";
     position: absolute;
     top: 100%;
@@ -21,10 +19,7 @@
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: black transparent transparent transparent;
-}
-
-.nt-web-tooltip-tooltip.active {
+    border-color: black transparent transparent transparent; }
+  .nt-web-tooltip-tooltip.active {
     opacity: 1;
-    visibility: visible;
-}
+    visibility: visible; }
