--- a/components/web-common/tooltip/lib/tooltip/tooltip.css
+++ b/components/web-common/tooltip/lib/tooltip/tooltip.css
@@ -11,15 +11,41 @@
   -webkit-transition: opacity .3s;
   transition: opacity .3s;
   white-space: nowrap; }
-  .nt-web-tooltip-tooltip::after {
+  .nt-web-tooltip-tooltip.left::after {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    margin-top: -5px;
+    margin-right: -10px;
+    border: 5px solid transparent;
+    border-left-color: black; }
+  .nt-web-tooltip-tooltip.top::after {
     content: " ";
     position: absolute;
     top: 100%;
     left: 50%;
     margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: black transparent transparent transparent; }
+    border: 5px solid transparent;
+    border-top-color: black; }
+  .nt-web-tooltip-tooltip.right::after {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    margin-top: -5px;
+    margin-left: -10px;
+    border: 5px solid transparent;
+    border-right-color: black; }
+  .nt-web-tooltip-tooltip.bottom::after {
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -5px;
+    margin-top: -10px;
+    border: 5px solid transparent;
+    border-bottom-color: black; }
   .nt-web-tooltip-tooltip.active {
     opacity: 1;
     visibility: visible; }
