--- a/styles/font.scss
+++ b/styles/font.scss
@@ -1,1 +1,2 @@
 $font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-code: "Consolas, " Liberation Mono ", Menlo, Courier, monospace";
