--- a/components/web-common/radio/radio/radio.scss
+++ b/components/web-common/radio/radio/radio.scss
@@ -1,6 +1,7 @@
 @import "../../../../styles/components/checkbox";
 
 &.i-checks {
+    position: relative;
     padding-left: 20px;
     cursor: pointer;
 
