--- a/components/web-common/radio/lib/radio-group/radio-group.css
+++ b/components/web-common/radio/lib/radio-group/radio-group.css
@@ -1,9 +1,12 @@
 .nt-web-radio-radio_group {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
-  .nt-web-radio-radio_group.vertical {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.nt-web-radio-radio_group.vertical {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column; }
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
