add tree json-tree

--- a/client/routes/+components/+category/+component/+document/document.scss
+++ b/client/routes/+components/+category/+component/+document/document.scss
@@ -19,7 +19,7 @@ table {
     }
     tbody tr {
         &.required {
-            background: #f6f8f8;
+            background: #fff6f6;
             font-weight: bold;
         }
         td {
