--- a/components/web-common/message/message/message.scss
+++ b/components/web-common/message/message/message.scss
@@ -101,6 +101,7 @@
     color: white;
     font-size: 16px;
     font-weight: bold;
+    word-break: break-all;
     &.info {
         background: #23b7e5;
     }
