--- a/components/editor/gaea-editor/gaea-editor/page/page.scss
+++ b/components/editor/gaea-editor/gaea-editor/page/page.scss
@@ -41,11 +41,26 @@
     width: 0;
     flex-grow: 1;
     height: 100%;
+    transition: margin .2s;
 }
 
-.viewport-main-content {
+.viewport-main-content-outer {
     display: flex;
-    position: relative;
-    margin: 0 auto;
+    flex-grow: 1;
+    .viewport-main-content {
+        display: flex;
+        position: relative;
+        margin: 0 auto;
+        height: 100%;
+    }
+}
+
+.left-bar, .right-bar {
+    background: white;
     height: 100%;
+}
+
+.right-bar {
+    border-left: 2px solid #eee;
+    box-shadow: -1px 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
 }
