--- a/components/editor/gaea-editor/gaea-editor/page/sidebar-addon/sidebar-addon.scss
+++ b/components/editor/gaea-editor/gaea-editor/page/sidebar-addon/sidebar-addon.scss
@@ -1,15 +1,6 @@
 & {
-    width: 240px;
     background: white;
-    box-shadow: -1px 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
-    border-left: 2px solid #eee;
+    height: 100%;
     z-index: 10;
     overflow: hidden;
-    transition: all .2s;
-    margin-left: -242px;
-    transform: translate3d(242px, 0, 0);
-    &.show {
-        margin-left: 0;
-        transform: translate3d(0, 0, 0);
-    }
 }
