--- a/components/editor/gaea-editor/lib/gaea-editor/panel/tree/tree-element/tree-element.css
+++ b/components/editor/gaea-editor/lib/gaea-editor/panel/tree/tree-element/tree-element.css
@@ -1,5 +1,5 @@
 .nt-editor-gaea-editor-gaea_editor-panel-tree-tree_element.selected {
-  outline: 2px solid #ccc; }
+  background-color: #e0ecf5; }
 
 .nt-editor-gaea-editor-gaea_editor-panel-tree-tree_element .flex {
   display: -webkit-box;
