--- a/components/editor/gaea-editor/lib/gaea-editor/page/page.css
+++ b/components/editor/gaea-editor/lib/gaea-editor/page/page.css
@@ -52,12 +52,29 @@
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  height: 100%; }
+  height: 100%;
+  -webkit-transition: margin .2s;
+  transition: margin .2s; }
 
-.nt-editor-gaea-editor-gaea_editor-page .viewport-main-content {
+.nt-editor-gaea-editor-gaea_editor-page .viewport-main-content-outer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
-  margin: 0 auto;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1; }
+  .nt-editor-gaea-editor-gaea_editor-page .viewport-main-content-outer .viewport-main-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    margin: 0 auto;
+    height: 100%; }
+
+.nt-editor-gaea-editor-gaea_editor-page .left-bar, .nt-editor-gaea-editor-gaea_editor-page .right-bar {
+  background: white;
   height: 100%; }
+
+.nt-editor-gaea-editor-gaea_editor-page .right-bar {
+  border-left: 2px solid #eee;
+  box-shadow: -1px 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05); }
