--- a/number/number.scss
+++ b/number/number.scss
@@ -32,5 +32,30 @@
     .fit-number-arrow-down:before {
         content: "\ea3e";
     }
+}
+
+.addon-container {
+    display: flex;
+}
+
+.addon {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    .fit-number-arrow-up, .fit-number-arrow-down {
+        padding: 1px 5px;
+        border: 1px solid #eee;
+        border-radius: 3px;
+        cursor: pointer;
+        &:hover {
+            background: whitesmoke;
+        }
+    }
+    .fit-number-arrow-down {
+        margin-top: 1px;
+    }
+}
+
+.unit-container{
 
 }
