--- a/input/input.scss
+++ b/input/input.scss
@@ -150,7 +150,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    height: 30px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
