--- a/components/web-common/select/select/select.scss
+++ b/components/web-common/select/select/select.scss
@@ -56,6 +56,7 @@
         margin: 0;
         .input {
             border-color: transparent;
+            padding: 5px;
         }
     }
     .search-input {
