--- a/components/web-common/number/lib/number/number.css
+++ b/components/web-common/number/lib/number/number.css
@@ -23,3 +23,27 @@
 
 .fit-number-arrow-down:before {
   content: "\ea3e"; }
+
+.nt-web-number-number .addon-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.nt-web-number-number .addon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 12px; }
+  .nt-web-number-number .addon .fit-number-arrow-up, .nt-web-number-number .addon .fit-number-arrow-down {
+    padding: 1px 5px;
+    border: 1px solid #eee;
+    border-radius: 3px;
+    cursor: pointer; }
+    .nt-web-number-number .addon .fit-number-arrow-up:hover, .nt-web-number-number .addon .fit-number-arrow-down:hover {
+      background: whitesmoke; }
+  .nt-web-number-number .addon .fit-number-arrow-down {
+    margin-top: 1px; }
