Gaea编辑器新增模板功能

--- a/components/editor/gaea-editor/gaea-editor/page/left-bar/template/template.scss
+++ b/components/editor/gaea-editor/gaea-editor/page/left-bar/template/template.scss
@@ -12,8 +12,8 @@
 
 .template-item {
     padding: 10px;
-    cursor: pointer;
+    cursor: move;
     &:hover {
-        background: whitesmoke;
+        font-weight: bold;
     }
 }
