--- a/components/editor/gaea-editor/gaea-editor/page/viewport/edit-helper/edit-helper.scss
+++ b/components/editor/gaea-editor/gaea-editor/page/viewport/edit-helper/edit-helper.scss
@@ -5,17 +5,34 @@
     }
     &.gaea-layout-active {
         .gaea-layout {
-            background-color: whitesmoke !important;
-            border: 2px dotted #ddd !important;
-        }
-        .gaea-layout-no-width {
-            min-width: 100px !important;
-        }
-        .gaea-layout-no-height {
-            min-height: 40px !important;
+            position: relative;
+            min-width: 40px !important;
+            min-height: 30px !important;
+            &:after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                border: 2px dotted #ddd;
+                z-index: 1;
+                pointer-events: none;
+            }
         }
     }
     &.gaea-selected {
-        border: 2px dashed #1c9aa0 !important;
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            border: 2px solid rgba(28, 154, 160, 0.5);
+            z-index: 1;
+            pointer-events: none;
+        }
     }
 }
