--- a/components/editor/gaea-editor/gaea-editor/panel/edit-box/edit-box.scss
+++ b/components/editor/gaea-editor/gaea-editor/panel/edit-box/edit-box.scss
@@ -38,3 +38,13 @@
     height: 100%;
     overflow-y: auto;
 }
+
+.shadow-container {
+    z-index: 99;
+    background-color: rgba(0, 0, 0, 0.3);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
