--- a/components/editor/gaea-editor/gaea-editor/page/page.scss
+++ b/components/editor/gaea-editor/gaea-editor/page/page.scss
@@ -22,6 +22,9 @@
     display: flex;
     position: relative;
     overflow: hidden;
+}
+
+.transparent-image {
     background-image: url('../images/transparent.png');
 }
 
