--- a/client/routes/+design-space/design-space.scss
+++ b/client/routes/+design-space/design-space.scss
@@ -1,18 +1,69 @@
-.navbar {
+.edit-list-container {
     display: flex;
+    padding: 10px 30px 30px 30px;
+    flex-wrap: wrap;
+}
+
+.app-container {
+    border: 1px solid #ddd;
+    margin-left: 20px;
+    margin-top: 20px;
+    transition: outline .3s;
+    outline: 1px solid transparent;
+    position: relative;
+    &:hover {
+        outline: 1px solid #67315e;
+        .absolute-layout {
+            display: block;
+        }
+    }
+    .image {
+        width: 200px;
+        height: 150px;
+        cursor: pointer;
+        background-color: #ccc;
+    }
+    .title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 10px 0;
+    }
+    .absolute-layout {
+        display: none;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        .header-container {
+            display: flex;
+            height: 30px;
+            justify-content: space-between;
+            pointer-events: auto;
+            .left {
+
+            }
+            .right {
+
+            }
+        }
+    }
+}
+
+.content-container {
+    display: flex;
+    padding: 5px;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
-    height: 30px;
-    background: #FDFDFD;
-    border-bottom: 1px solid rgba(43, 50, 57, 0.15);
 }
 
-.navbar-title {
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.second-designer-jump-button {
-    margin-left: 10px;
+.operate-button {
+    cursor: pointer;
+    transition: all .3s;
+    padding: 5px;
+    &:hover {
+        transform: scale(1.2);
+    }
 }
