支持树状视图拖拽

--- a/components/editor/gaea-editor/gaea-editor/page/page.scss
+++ b/components/editor/gaea-editor/gaea-editor/page/page.scss
@@ -50,10 +50,11 @@
 .viewport-main-content-outer {
     display: flex;
     flex-grow: 1;
+    align-items: center;
+    justify-content: center;
     .viewport-main-content {
         display: flex;
         position: relative;
-        margin: 0 auto;
     }
 }
 
