--- a/components/editor/gaea-editor/gaea-editor/panel/edit-box/basic/basic.scss
+++ b/components/editor/gaea-editor/gaea-editor/panel/edit-box/basic/basic.scss
@@ -92,8 +92,7 @@
     .edit-line-label {
         display: flex;
         align-items: center;
-        flex-grow: 1;
-        width: 0;
+        padding-right: 5px;
         font-size: 12px;
         color: #666;
         font-weight: bold;
@@ -104,6 +103,27 @@
     .edit-line-editor {
         flex-grow: 3;
         width: 0;
+    }
+    .edit-line-variable-container {
+        display: flex;
+        padding-right: 5px;
+        .edit-line-enable-variable {
+            width: 26px;
+            height: 23px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 1px;
+            border: 1px solid #eee;
+            cursor: pointer;
+            border-radius: 3px;
+            &.active {
+                background: whitesmoke;
+            }
+            &:hover {
+                background: whitesmoke;
+            }
+        }
     }
 }
 
