--- a/components/editor/gaea-editor/lib/gaea-editor/page/left-bar/left-bar.css
+++ b/components/editor/gaea-editor/lib/gaea-editor/page/left-bar/left-bar.css
@@ -6,7 +6,8 @@
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  border-right: 1px solid #eee; }
+  border-right: 1px solid #eee;
+  z-index: 1; }
   .nt-editor-gaea-editor-gaea_editor-page-left_bar.extend-container {
     -webkit-transform: translate3d(-202px, 0, 0);
             transform: translate3d(-202px, 0, 0);
