--- a/components/editor/gaea-editor/gaea-editor/panel/edit-box/basic/edit-components/layout/layout.scss
+++ b/components/editor/gaea-editor/gaea-editor/panel/edit-box/basic/edit-components/layout/layout.scss
@@ -27,3 +27,32 @@
     flex-grow: 2;
     width: 0;
 }
+
+.svg-icon {
+    width: 20px;
+    height: 20px;
+}
+
+.rotate-45 {
+    transform: rotate(45deg);
+}
+
+.rotate-90 {
+    transform: rotate(90deg);
+}
+
+.rotate-135 {
+    transform: rotate(135deg);
+}
+
+.rotate-180 {
+    transform: rotate(180deg);
+}
+
+.rotate-270 {
+    transform: rotate(270deg);
+}
+
+.text-child {
+    padding: 0 7px !important;
+}
