--- a/client/components/designer-card/designer-card.scss
+++ b/client/components/designer-card/designer-card.scss
@@ -21,12 +21,14 @@
         align-items: center;
         font-weight: bold;
         justify-content: center;
-        align-items: center;
         margin: 5px 0;
     }
     .description {
+        background-color: white;
+        padding: 0 12px 12px;
         font-size: 12px;
         color: #666;
+        height: 20px;
     }
     .absolute-layout {
         display: none;
@@ -55,6 +57,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: white;
+    padding: 12px 12px 0;
 }
 
 .operate-button {
