--- a/client/routes/+design-space/navbar/navbar.scss
+++ b/client/routes/+design-space/navbar/navbar.scss
@@ -2,10 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 15px 50px;
     height: 30px;
-    background: #FDFDFD;
-    border-bottom: 1px solid rgba(43, 50, 57, 0.15);
+    background: white;
 }
 
 .navbar-title {
